# example_pypi_packaging

./: main.py  pyproject.toml
src/example_package_clem/: example.py
